PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) int __stdcall DPLDecrypt(int instanceID);
__declspec(dllimport) int __stdcall DPLDecryptFile(int instanceID, wchar_t * InputFileName, wchar_t * OutputFileName, wchar_t * Password);
__declspec(dllimport) int __stdcall DPLDecryptFileA(int instanceID, char * InputFileName, char * OutputFileName, char * Password);
__declspec(dllimport) int __stdcall DPLDeleteAnalysis(int instanceID, int AnalysisID);
__declspec(dllimport) int __stdcall DPLDeleteAnnotation(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLDeleteContentStream(int instanceID);
__declspec(dllimport) int __stdcall DPLDeleteFormField(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLDeleteOptionalContentGroup(int instanceID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLDeletePageLGIDict(int instanceID, int DictIndex);
__declspec(dllimport) int __stdcall DPLDeletePages(int instanceID, int StartPage, int PageCount);
__declspec(dllimport) int __stdcall DPLDocJavaScriptAction(int instanceID, wchar_t * ActionType, wchar_t * JavaScript);
__declspec(dllimport) int __stdcall DPLDocJavaScriptActionA(int instanceID, char * ActionType, char * JavaScript);
__declspec(dllimport) int __stdcall DPLDocumentCount(int instanceID);
__declspec(dllimport) int __stdcall DPLDrawArc(int instanceID, double XPos, double YPos, double Radius, double StartAngle, double EndAngle, int Pie, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawBarcode(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Text, int Barcode, int Options);
__declspec(dllimport) int __stdcall DPLDrawBarcodeA(int instanceID, double Left, double Top, double Width, double Height, char * Text, int Barcode, int Options);
__declspec(dllimport) int __stdcall DPLDrawBox(int instanceID, double Left, double Top, double Width, double Height, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawCapturedPage(int instanceID, int CaptureID, double Left, double Top, double Width, double Height);
__declspec(dllimport) int __stdcall DPLDrawCapturedPageMatrix(int instanceID, int CaptureID, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawCircle(int instanceID, double XPos, double YPos, double Radius, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawDataMatrixSymbol(int instanceID, double Left, double Top, double ModuleSize, wchar_t * Text, int Encoding, int SymbolSize, int Options);
__declspec(dllimport) int __stdcall DPLDrawDataMatrixSymbolA(int instanceID, double Left, double Top, double ModuleSize, char * Text, int Encoding, int SymbolSize, int Options);
__declspec(dllimport) int __stdcall DPLDrawEllipse(int instanceID, double XPos, double YPos, double Width, double Height, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawEllipticArc(int instanceID, double XPos, double YPos, double Width, double Height, double StartAngle, double EndAngle, int Pie, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawHTMLText(int instanceID, double Left, double Top, double Width, wchar_t * HTMLText);
__declspec(dllimport) int __stdcall DPLDrawHTMLTextA(int instanceID, double Left, double Top, double Width, char * HTMLText);
__declspec(dllimport) wchar_t* __stdcall DPLDrawHTMLTextBox(int instanceID, double Left, double Top, double Width, double Height, wchar_t * HTMLText);
__declspec(dllimport) char* __stdcall DPLDrawHTMLTextBoxA(int instanceID, double Left, double Top, double Width, double Height, char * HTMLText);
__declspec(dllimport) wchar_t* __stdcall DPLDrawHTMLTextBoxMatrix(int instanceID, double Width, double Height, wchar_t * HTMLText, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) char* __stdcall DPLDrawHTMLTextBoxMatrixA(int instanceID, double Width, double Height, char * HTMLText, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawHTMLTextMatrix(int instanceID, double Width, wchar_t * HTMLText, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawHTMLTextMatrixA(int instanceID, double Width, char * HTMLText, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawImage(int instanceID, double Left, double Top, double Width, double Height);
__declspec(dllimport) int __stdcall DPLDrawImageMatrix(int instanceID, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawIntelligentMailBarcode(int instanceID, double Left, double Top, double BarWidth, double FullBarHeight, double TrackerHeight, double SpaceWidth, wchar_t * BarcodeData, int Options);
__declspec(dllimport) int __stdcall DPLDrawIntelligentMailBarcodeA(int instanceID, double Left, double Top, double BarWidth, double FullBarHeight, double TrackerHeight, double SpaceWidth, char * BarcodeData, int Options);
__declspec(dllimport) int __stdcall DPLDrawLine(int instanceID, double StartX, double StartY, double EndX, double EndY);
__declspec(dllimport) int __stdcall DPLDrawMultiLineText(int instanceID, double XPos, double YPos, wchar_t * Delimiter, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawMultiLineTextA(int instanceID, double XPos, double YPos, char * Delimiter, char * Text);
__declspec(dllimport) int __stdcall DPLDrawPDF417Symbol(int instanceID, double Left, double Top, wchar_t * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawPDF417SymbolA(int instanceID, double Left, double Top, char * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawPDF417SymbolEx(int instanceID, double Left, double Top, wchar_t * Text, int Options, int FixedColumns, int FixedRows, int ErrorLevel, double ModuleSize, double HeightWidthRatio);
__declspec(dllimport) int __stdcall DPLDrawPDF417SymbolExA(int instanceID, double Left, double Top, char * Text, int Options, int FixedColumns, int FixedRows, int ErrorLevel, double ModuleSize, double HeightWidthRatio);
__declspec(dllimport) int __stdcall DPLDrawPath(int instanceID, int PathOptions);
__declspec(dllimport) int __stdcall DPLDrawPathEvenOdd(int instanceID, int PathOptions);
__declspec(dllimport) int __stdcall DPLDrawPostScriptXObject(int instanceID, int PSRef);
__declspec(dllimport) int __stdcall DPLDrawQRCode(int instanceID, double Left, double Top, double SymbolSize, wchar_t * Text, int EncodeOptions, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawQRCodeA(int instanceID, double Left, double Top, double SymbolSize, char * Text, int EncodeOptions, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawRotatedBox(int instanceID, double Left, double Bottom, double Width, double Height, double Angle, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawRotatedCapturedPage(int instanceID, int CaptureID, double Left, double Bottom, double Width, double Height, double Angle);
__declspec(dllimport) int __stdcall DPLDrawRotatedImage(int instanceID, double Left, double Bottom, double Width, double Height, double Angle);
__declspec(dllimport) int __stdcall DPLDrawRotatedMultiLineText(int instanceID, double XPos, double YPos, double Angle, wchar_t * Delimiter, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawRotatedMultiLineTextA(int instanceID, double XPos, double YPos, double Angle, char * Delimiter, char * Text);
__declspec(dllimport) int __stdcall DPLDrawRotatedText(int instanceID, double XPos, double YPos, double Angle, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawRotatedTextA(int instanceID, double XPos, double YPos, double Angle, char * Text);
__declspec(dllimport) int __stdcall DPLDrawRotatedTextBox(int instanceID, double Left, double Top, double Width, double Height, double Angle, wchar_t * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawRotatedTextBoxA(int instanceID, double Left, double Top, double Width, double Height, double Angle, char * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawRotatedTextBoxEx(int instanceID, double Left, double Top, double Width, double Height, double Angle, wchar_t * Text, int Options, int Border, int Radius, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawRotatedTextBoxExA(int instanceID, double Left, double Top, double Width, double Height, double Angle, char * Text, int Options, int Border, int Radius, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawRoundedBox(int instanceID, double Left, double Top, double Width, double Height, double Radius, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawRoundedRotatedBox(int instanceID, double Left, double Bottom, double Width, double Height, double Radius, double Angle, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawScaledImage(int instanceID, double Left, double Top, double Scale);
__declspec(dllimport) int __stdcall DPLDrawSpacedText(int instanceID, double XPos, double YPos, double Spacing, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawSpacedTextA(int instanceID, double XPos, double YPos, double Spacing, char * Text);