PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

Public Declare Function DPLDecrypt LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDecrypt" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLDecryptFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDecryptFileA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sOutputFileName As String, ByVal sPassword As String) As Long
Public Declare Function DPLDeleteAnalysis LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeleteAnalysis" ( _
  ByVal iInstanceID As Long, ByVal iAnalysisID As Long) As Long
Public Declare Function DPLDeleteAnnotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeleteAnnotation" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLDeleteContentStream LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeleteContentStream" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLDeleteFormField LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeleteFormField" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLDeleteOptionalContentGroup LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeleteOptionalContentGroup" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentGroupID As Long) As Long
Public Declare Function DPLDeletePageLGIDict LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeletePageLGIDict" ( _
  ByVal iInstanceID As Long, ByVal iDictIndex As Long) As Long
Public Declare Function DPLDeletePages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDeletePages" ( _
  ByVal iInstanceID As Long, ByVal iStartPage As Long, _
  ByVal iPageCount As Long) As Long
Public Declare Function DPLDocJavaScriptAction LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDocJavaScriptActionA" ( _
  ByVal iInstanceID As Long, ByVal sActionType As String, _
  ByVal sJavaScript As String) As Long
Public Declare Function DPLDocumentCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDocumentCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLDrawArc LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawArc" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dRadius As Double, ByVal dStartAngle As Double, _
  ByVal dEndAngle As Double, ByVal iPie As Long, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawBarcode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawBarcodeA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sText As String, _
  ByVal iBarcode As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLDrawBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawBox" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawCapturedPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawCapturedPage" ( _
  ByVal iInstanceID As Long, ByVal iCaptureID As Long, ByVal dLeft As Double, _
  ByVal dTop As Double, ByVal dWidth As Double, ByVal dHeight As Double) As Long
Public Declare Function DPLDrawCapturedPageMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawCapturedPageMatrix" ( _
  ByVal iInstanceID As Long, ByVal iCaptureID As Long, ByVal dM11 As Double, _
  ByVal dM12 As Double, ByVal dM21 As Double, ByVal dM22 As Double, _
  ByVal dMDX As Double, ByVal dMDY As Double) As Long
Public Declare Function DPLDrawCircle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawCircle" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dRadius As Double, ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawDataMatrixSymbol LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawDataMatrixSymbolA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dModuleSize As Double, ByVal sText As String, ByVal iEncoding As Long, _
  ByVal iSymbolSize As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLDrawEllipse LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawEllipse" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawEllipticArc LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawEllipticArc" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dStartAngle As Double, _
  ByVal dEndAngle As Double, ByVal iPie As Long, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawHTMLText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawHTMLTextA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal sHTMLText As String) As Long
Public Declare Function DPLDrawHTMLTextBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawHTMLTextBoxA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal sHTMLText As String) As String
Public Declare Function DPLDrawHTMLTextBoxMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawHTMLTextBoxMatrixA" ( _
  ByVal iInstanceID As Long, ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal sHTMLText As String, ByVal dM11 As Double, ByVal dM12 As Double, _
  ByVal dM21 As Double, ByVal dM22 As Double, ByVal dMDX As Double, _
  ByVal dMDY As Double) As String
Public Declare Function DPLDrawHTMLTextMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawHTMLTextMatrixA" ( _
  ByVal iInstanceID As Long, ByVal dWidth As Double, ByVal sHTMLText As String, _
  ByVal dM11 As Double, ByVal dM12 As Double, ByVal dM21 As Double, _
  ByVal dM22 As Double, ByVal dMDX As Double, ByVal dMDY As Double) As Long
Public Declare Function DPLDrawImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawImage" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double) As Long
Public Declare Function DPLDrawImageMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawImageMatrix" ( _
  ByVal iInstanceID As Long, ByVal dM11 As Double, ByVal dM12 As Double, _
  ByVal dM21 As Double, ByVal dM22 As Double, ByVal dMDX As Double, _
  ByVal dMDY As Double) As Long
Public Declare Function DPLDrawIntelligentMailBarcode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawIntelligentMailBarcodeA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dBarWidth As Double, ByVal dFullBarHeight As Double, _
  ByVal dTrackerHeight As Double, ByVal dSpaceWidth As Double, _
  ByVal sBarcodeData As String, ByVal iOptions As Long) As Long
Public Declare Function DPLDrawLine LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawLine" ( _
  ByVal iInstanceID As Long, ByVal dStartX As Double, ByVal dStartY As Double, _
  ByVal dEndX As Double, ByVal dEndY As Double) As Long
Public Declare Function DPLDrawMultiLineText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawMultiLineTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal sDelimiter As String, ByVal sText As String) As Long
Public Declare Function DPLDrawPDF417Symbol LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawPDF417SymbolA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal sText As String, ByVal iOptions As Long) As Long
Public Declare Function DPLDrawPDF417SymbolEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawPDF417SymbolExA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal sText As String, ByVal iOptions As Long, ByVal iFixedColumns As Long, _
  ByVal iFixedRows As Long, ByVal iErrorLevel As Long, _
  ByVal dModuleSize As Double, ByVal dHeightWidthRatio As Double) As Long
Public Declare Function DPLDrawPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawPath" ( _
  ByVal iInstanceID As Long, ByVal iPathOptions As Long) As Long
Public Declare Function DPLDrawPathEvenOdd LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawPathEvenOdd" ( _
  ByVal iInstanceID As Long, ByVal iPathOptions As Long) As Long
Public Declare Function DPLDrawPostScriptXObject LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawPostScriptXObject" ( _
  ByVal iInstanceID As Long, ByVal iPSRef As Long) As Long
Public Declare Function DPLDrawQRCode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawQRCodeA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dSymbolSize As Double, ByVal sText As String, _
  ByVal iEncodeOptions As Long, ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawRotatedBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedBox" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dBottom As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dAngle As Double, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawRotatedCapturedPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedCapturedPage" ( _
  ByVal iInstanceID As Long, ByVal iCaptureID As Long, ByVal dLeft As Double, _
  ByVal dBottom As Double, ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal dAngle As Double) As Long
Public Declare Function DPLDrawRotatedImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedImage" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dBottom As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal dAngle As Double) As Long
Public Declare Function DPLDrawRotatedMultiLineText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedMultiLineTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dAngle As Double, ByVal sDelimiter As String, _
  ByVal sText As String) As Long
Public Declare Function DPLDrawRotatedText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dAngle As Double, ByVal sText As String) As Long
Public Declare Function DPLDrawRotatedTextBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedTextBoxA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dAngle As Double, _
  ByVal sText As String, ByVal iOptions As Long) As Long
Public Declare Function DPLDrawRotatedTextBoxEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRotatedTextBoxExA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dAngle As Double, _
  ByVal sText As String, ByVal iOptions As Long, ByVal iBorder As Long, _
  ByVal iRadius As Long, ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawRoundedBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRoundedBox" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dRadius As Double, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawRoundedRotatedBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawRoundedRotatedBox" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dBottom As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dRadius As Double, _
  ByVal dAngle As Double, ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawScaledImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawScaledImage" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dScale As Double) As Long
Public Declare Function DPLDrawSpacedText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawSpacedTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dSpacing As Double, ByVal sText As String) As Long
